syntax = "proto3";
option go_package = "github.com/BigNoseCattyHome/aorb/backend/rpc/vote;vote";
package rpc.vote;

import "google/protobuf/timestamp.proto";
import "user.proto";

message Vote{
  user.User vote_user = 1;
  string choice = 2;
  string vote_uuid = 3;
  google.protobuf.Timestamp create_at = 4;
  google.protobuf.Timestamp delete_at = 5;
}

message CreateVoteRequest{
  string poll_uuid = 1;
  string username = 2;
  string choice = 3;
}

message CreateVoteResponse{
  int32 status_code = 1;  // 状态码，0-成功，其他值-失败
  string status_msg = 2;  // 返回状态描述
}

message GetVoteCountRequest {
  string poll_uuid = 1;
}

message GetVoteCountResponse {
  int32 status_code = 1;  // 状态码，0-成功，其他值-失败
  string status_msg = 2;  // 返回状态描述
  int32 count_1 = 3;
  int32 count_2 = 4;
}

service VoteService{
  rpc CreateVote (CreateVoteRequest) returns (CreateVoteResponse);
  rpc GetVote (GetVoteCountRequest) returns (GetVoteCountResponse);
}